--- a/templates/index.html
+++ b/templates/index.html
@@ -15,6 +15,7 @@
         <div class="max-w-screen-xl mx-auto h-full flex items-center justify-between h-10 px-3 sm:px-0">
         </div>
       </header>
+      <div class="max-w-2xl mx-auto flex flex-col gap-4 mb-4 px-3 sm:px-0">
         <h1>Chasiddus AI</h1>
         <h2>Search for any Dvar Torah in Chasidishe Seforim using AI. This version has access to the entire Divrey Yoel.</h2>
 
@@ -38,6 +39,7 @@
         </form>
 
         <div id="result-container" class="result-container"></div>
+      </div>
     </div>
 
     <script>
