--- a/templates/index.html
+++ b/templates/index.html
@@ -16,7 +16,14 @@
         </div>
       </header>
       <div class="max-w-2xl mx-auto flex flex-col gap-4 mb-4 px-3 sm:px-0">
-   
+        <div class="flex gap-3">
+          <div class="flex justify-center items-center rounded-full h-[42px] w-[42px] align-content bg-blue-500">
+            DG
+          </div>
+          <div class="bg-gray-100 border border-gray-200 rounded-2xl p-3 f-narkis flex-1 text-lg">
+            <md-block rendered="property"><p>what can we learn from josephs dreams?</p></md-block>
+          </div>
+        </div>
 
         <form id="query-form" class="chat-form">
            
