User checkpoint: Add top margin to profile initials container.

--- a/templates/index.html
+++ b/templates/index.html
@@ -16,7 +16,7 @@
         </div>
       </header>
       <div class="max-w-2xl mx-auto flex flex-col gap-4 mb-4 px-3 sm:px-0">
-        <div class="flex gap-3">
+        <div class="flex gap-3 mt-4">
           <div class="flex justify-center items-center rounded-full h-[42px] w-[42px] align-content bg-blue-500">
             DG
           </div>
