--- a/templates/index.html
+++ b/templates/index.html
@@ -13,6 +13,8 @@
     <div id="app" data-v-app="">
       <header class="bg-gradient-to-r from-blue-700 to-blue-1000 h-14 relative shadow-custom">
         <div class="max-w-screen-xl mx-auto h-full flex items-center justify-between h-10 px-3 sm:px-0">
+          <div class="answer flex-1">
+          </div>
         </div>
       </header>
       <div class="max-w-2xl mx-auto flex flex-col gap-4 mb-4 px-3 sm:px-0">
